--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@angular/compiler": "^10.1.6",
     "@angular/core": "^10.1.6",
     "@angular/forms": "^10.1.6",
+    "@angular/localize": "^10.1.6",
     "@angular/platform-browser": "^10.1.6",
     "@angular/platform-browser-dynamic": "^10.1.6",
     "@angular/router": "^10.1.6",
+    "@microsoft/signalr": "^3.1.9",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.3",
     "rxjs": "~6.6.0",
